# hackathon-II-todo

./: .env.example  .gitignore  AGENTS.md  AUTH-FIXES-SUMMARY.md  AUTHENTICATION_FIXED.md  AUTHENTICATION_ISSUE_FIXED.md  BUDGET-CHANGES-SUMMARY.md  CHATKIT_QUICKSTART.md  CHATKIT_SUMMARY.md  CHAT_ENDPOINT_TESTS_SUMMARY.md  CLAUDE.md  COMPLETE-BEGINNER-GUIDE.md  COMPLETE-DEPLOYMENT-GUIDE.md  DEPLOYMENT-CONTINUATION.md  DEPLOYMENT-SUCCESS.md  DEPLOYMENT-UPDATE-GUIDE.md  DOCKER-BUILD-FIXES.md  FINAL_FIX.md  FIXES_APPLIED.md  Gemini.md  IMPLEMENTATION-SUMMARY-PHASE5.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_TEST.md  MCP_TOOLS_TESTS_SUMMARY.md  QUICK-UPDATE-CHEATSHEET.md  README-PHASE4.md  README-PHASE5.md  README-STUDENT-BUDGET.md  README.md  STARTUP_GUIDE.md  VOICE_INPUT_GUIDE.md  VOICE_INPUT_QUICKSTART.md  WHICH-GUIDE-TO-FOLLOW.md  console.txt  create-better-auth-tables.sql  docker-compose.yml  enhancement_plan.md  further_improvements.md  issues-to-resolve.md  k8s-azure-deploy.yaml  (+7 more)
backend/: .dockerignore  .env.example  BACKEND_FINALIZED.md  CLAUDE.md  Dockerfile  IMPLEMENTATION.md  README.md  TEST_REPORT.md  alembic.ini  docker-start.sh  fix_alembic_version.py  package-lock.json  pyproject.toml  requirements.txt
backend/src/: config.py  main.py
backend/src/agent/: agent_tools.py  todo_agent.py
backend/src/api/: deps.py
backend/src/api/middleware/: jwt_auth.py
backend/src/api/routers/: chat.py  chatkit_session.py  statistics.py  tags.py  tasks.py
backend/src/core/: exceptions.py
backend/src/db/: session.py
backend/src/db/migrations/: env.py
backend/src/db/migrations/versions/: 0ccd40e90d3b_initial_schema_users_and_tasks_tables.py  107075eb278c_add_due_date_and_priority_to_tasks.py  3451e5a5cdef_add_conversations_and_messages_tables_.py  4de547558a7d_add_tags_and_task_tags_tables.py  6057f4c23577_use_better_auth_user_table.py  a8b9c1d2e3f4_add_task_completions_table.py  b9c2d3e4f5f6_add_focus_sessions_table.py  b9c2d3e4f5g6_add_focus_sessions_table.py  be409eb710c0_add_cascade_delete_to_task_completions_.py  f000f9c46c21_add_status_field_to_tasks.py
backend/src/mcp/: README.md  __init__.py  agent_tools.py  tools.py
backend/src/models/: __init__.py  base.py  completion.py  conversation.py  message.py  tag.py  task.py  user.py
backend/src/schemas/: chat.py  common.py  statistics.py  tag.py  task.py
backend/src/services/: focus_service.py  statistics_service.py  tag_service.py  task_service.py
backend/tests/: conftest.py  test_auth.py  test_database.py  test_tasks.py
backend/tests/contract/: test_task_schemas.py
backend/tests/integration/: test_chat.py  test_task_api.py
backend/tests/unit/: test_mcp_tools.py  test_task_service.py
frontend/: .dockerignore  AUTH_ENHANCEMENT.md  AUTH_SETUP_GUIDE.md  BEFORE_AFTER.md  BETTER_AUTH_NEON_ISSUE.md  CLAUDE.md  CLEAR_COOKIES.md  Dockerfile  QUICK_START.md  README.md  check-schema.ts  drop-tables.ts  (+12 more)
(+222 files in other folders)
